sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value getNombresValeurs
  while(i!=getNombresValeurs()-2){
           ^