sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i = 0 
  while(i!=getNombresValeurs()-2){
    if (i==0){
      i = i+1
    }
    if(!plusPetit(i+1,i+2)){
      echange(i+1,i+2)
      i = i-1
    } else{
      i = i+1
    }
  }
}